--- a/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
@@ -149,7 +149,7 @@ PLUGINLIST\ NOT\ FOUND=PluginList not found
 
 PLUGIN\ ERROR=Plugin Error
 
-COULD\ NOT\ LOAD\ PLUGIN\:\ {0}=Could not load plugin: {0}\\n
+COULD\ NOT\ LOAD\ PLUGIN\:\ {0}=Could not load plugin: {0}\n
 
 EDIT\ COLUMN\ VIEWS=Edit Column Views
 
@@ -207,7 +207,7 @@ COPY=Copy
 
 EDIT=Edit
 
-INVALID\ LOGOUT\ URL\:\ {0}=Invalid logout url:\\n{0}
+INVALID\ LOGOUT\ URL\:\ {0}=Invalid logout url:\n{0}
 
 LOGOUTURL=LogoutUrl
 
@@ -260,7 +260,7 @@ SAVE\ CHANGES\ TO\ DISK=Save Changes to Disk
 SELECT\ RESOURCE\ FILE=Select Resource File
 
 BROWSE\ FOR\ RESOURCE\ FILE=Browse For Resource File
-ABOUT\ TO\ REPLACE\ ALL\ VALUES\ IN\ COLUMN\ {0}\ WITH\ THE\ VALUE\ {1}(<MULTIPLE\ VALUES>\ WILL\ NOT\ BE\ AFFECTED)=About to replace all values in column \\"{0}\\"\\nwith the value \\"{1}\\"\\n(<multiple values> will not be affected)
+ABOUT\ TO\ REPLACE\ ALL\ VALUES\ IN\ COLUMN\ {0}\ WITH\ THE\ VALUE\ {1}(<MULTIPLE\ VALUES>\ WILL\ NOT\ BE\ AFFECTED)=About to replace all values in column \\"{0}\\"\nwith the value \\"{1}\\"\n(<multiple values> will not be affected)
 LOGOUT\ ERROR=Logout Error
 
 SAVE\ CURRENT\ COLUMN\ VIEW=Save Current Column View
