--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -55,3 +55,22 @@ SKIP=Skip
 MOVE\ ALL=Move all
 MOVE=Move
 MOVE_SOURCE_NODE_TO_TARGET_NODE=Move %s to %s?
+SELECT\ EXPORT\ DESTINATION=Select export destination
+SELECT\ NODES\ TO\ EXPORT=Select nodes to export
+NO\ NODES\ ARE\ SELECTED.\ SELECT\ AT\ LEAST\ ONE\ NODE\ TO\ EXPORT.=No nodes are selected. Select at least one node to export.
+AN\ ERROR\ OCCURRED\ WHILE\ EXPORTING\ FAVOURITES=An error occurred while exporting favourites:\n%s.\nSee error log for details.
+EXPORT\ COMPLETE=Export complete
+FAVOURITES\ HAVE\ BEEN\ EXPORTED=Favourites have been exported
+FAVOURITES_AN\ ERROR\ OCCURRED\ WHILE\ IMPORTING\ FAVOURITES=An error occurred while importing favourites:\n%s.\nSee error log for details.
+IMPORT\ COMPLETE=Import complete
+FAVOURITES\ HAVE\ BEEN\ IMPORTED=Favourites have been imported
+SELECT\ FAVOURITES\ EXPORT\ TO\ IMPORT=Select favourites export to import
+FAVOURITES\ EXPORT\ FILE=Favourites export file
+EXPORT\ SELECTION=Export selection
+REFRESH=Refresh
+IMPORT\ FROM\ DISK=Import from disk
+FAVOURITES_THE\ DIRECTORY\ SHOULD\ CONTAIN\ A\ FILE\ CALLED=The directory should contain a file called %s.\n
+FAVOURITES_PRESS\ THE\ IMPORT\ BUTTON=Press the import button, then choose an existing directory that has an exported collection of favourites. 
+EXPORT\ FAVOURITES=Export favourites
+IMPORT\ FAVOURITES=Import favourites
+FAVOURITES_SELECT\ ONE\ OR\ MORE\ FAVOURITES\ THAT\ YOU\ WISH\ TO\ EXPORT=Select one or more favourites that you wish to export from the list below, then press the export button. Then select the directory to which you would like to export the selected favourites.\n\n Hint: you can use modifier keys on the keyboard to select or deselect individual favourites (CTRL or CMD) or to select a range (SHIFT).\n
