--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -74,3 +74,14 @@ FAVOURITES_PRESS\ THE\ IMPORT\ BUTTON=Press the import button, then choose an ex
 EXPORT\ FAVOURITES=Export favourites
 IMPORT\ FAVOURITES=Import favourites
 FAVOURITES_SELECT\ ONE\ OR\ MORE\ FAVOURITES\ THAT\ YOU\ WISH\ TO\ EXPORT=Select one or more favourites that you wish to export from the list below, then press the export button. Then select the directory to which you would like to export the selected favourites.\n\n Hint: you can use modifier keys on the keyboard to select or deselect individual favourites (CTRL or CMD) or to select a range (SHIFT).\n
+PREVIOUS=Previous
+#'Key' as in IMDI key
+CHANGE\ KEY\ NAME=Change key name
+APPLY=Apply
+KEY\ NAME\:\ =Key Name: 
+LONGFIED_ATTRIBUTE_VALUE=Value
+LONGFIELD_ATTRIBUTE=Attribute
+NEXT=Next
+INITIALIZING...=initializing...
+#NOTE: This has to be something really unique that ordinary should not appear in the controlled vocabulary. The brackets should normally ensure this.
+<SELECT>=<select>
