--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -87,3 +87,15 @@ INITIALIZING...=initializing...
 <SELECT>=<select>
 FINISH=Finish
 ARBIL\ WIZARD=Arbil wizard
+DO\ YOU\ REALLY\ WANT\ TO\ CANCEL\ THE\ WIZARD?=Do you really want to cancel the wizard?
+ERROR\ WHILE\ GETTING\ WIZARD\ TEXT.\ PLEASE\ CHECK\ THE\ ERROR\ LOG.=Error while getting wizard text. Please check the error log.
+DISCARD\ CHANGES=Discard changes
+DOING\ THIS\ WILL\ RESET\ THE\ LIST\ OF\ REMOTE\ LOCATIONS.\ DO\ YOU\ WANT\ TO\ GO\ BACK\ A\ STEP\ IN\ THE\ WIZARD?=Doing this will reset the list of remote locations. Do you want to go back a step in the wizard?
+SETUP_NO\ LOCATIONS\ SPECIFIED=No locations specified
+SETUP_YOU\ HAVE\ NOT\ YET\ SPECIFIED\ ANY\ REMOTE\ LOCATIONS.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=You have not yet specified any remote locations. Are you sure you want to continue?
+SETUP_SELECT\ A\ METADATA\ FORMAT=Select a metadata format
+SETUP_SELECT\ AT\ LEAST\ ONE\ OF\ THE\ OPTIONS\ BEFORE\ CONTINUING=Select at least one of the options before continuing
+SETUP_NO\ PROFILES\ SELECTED=No profiles selected
+SETUP_YOU\ HAVE\ NOT\ YET\ SELECTED\ PROFILES\ TO\ USE.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=You have not yet selected profiles to use. Are you sure you want to continue?
+SETUP_CLARIN\ PROFILES=Clarin Profiles
+CANCEL\ WIZARD=Cancel wizard
