--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -99,3 +99,19 @@ SETUP_NO\ PROFILES\ SELECTED=No profiles selected
 SETUP_YOU\ HAVE\ NOT\ YET\ SELECTED\ PROFILES\ TO\ USE.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=You have not yet selected profiles to use. Are you sure you want to continue?
 SETUP_CLARIN\ PROFILES=Clarin Profiles
 CANCEL\ WIZARD=Cancel wizard
+FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Show only checked fields (hides all others and overrides hide fields)
+FIELD_VIEW_TABLE_INVALID\ WIDTH\ FOR\ COLUMN\ {0}=Invalid width for column {0}
+FIELD_VIEW_TABLE_COLUMN\ WIDTH=Column width
+FIELD_VIEW_TABLE_HIDE=Hide
+FIELD_VIEW_TABLE_SHOW\ ONLY=Show Only
+FIELD_VIEW_TABLE_COLUMN\ NAME=Column Name
+FIELD_VIEW_TABLE_HIDE\ CHECKED\ FIELDS\ (ONLY\ ACTIVE\ WHEN\ NO\ 'SHOW\ ONLY'\ SELECTION\ IS\ MADE)=Hide checked fields (only active when no 'show only' selection is made)
+ARBIL\ LOG\ CONSOLE=Arbil log console
+#button text, imperative (stop search)
+SEARCH_STOP=stop
+SEARCHED\:\ {0}/{1}\ FOUND\:\ {2}=searched: {0}/{1} found: {2}
+SEARCH\ CANCELED=search canceled
+SEARCH_CONNECTING\ TO\ SERVER=connecting to server
+#button text, imperative
+SEARCH_SEARCH=search
+COLUMN\ WIDTH\ INVALID=Column width invalid
