--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -30,7 +30,7 @@ SELECTION=Selection
 DIRECTORIES=Directories
 METADATA\ FILES=Metadata Files
 THE\ SELECTED\ EXPORT\ DIRECTORY\ IS\ NOT\ EMPTY.\ ON\ EXPORT,\ YOU\ WILL\ HAVE\ THE\ CHOICE\ TO\ EITHER\ OVERRIDE\ OR\ CREATE\ DUPLICATES\ OF\ ANY\ PRESENT\ FILES.DO\ YOU\ WANT\ TO\ CONTINUE?=The selected export directory is not empty. On export, you will have the\nchoice to either override or create duplicates of any present files.\nDo you want to continue?
-THE\ EXPORT\ DIRECTORY\ {0}\ DOES\ NOT\ EXIST.PLEASE\ SELECT\ OR\ CREATE\ A\ DIRECTORY.=The export directory\n\\"{0}\\"\ndoes not exist.\nPlease select or create a directory.
+THE\ EXPORT\ DIRECTORY\ {0}\ DOES\ NOT\ EXIST.PLEASE\ SELECT\ OR\ CREATE\ A\ DIRECTORY.=The export directory\n\"{0}\"\ndoes not exist.\nPlease select or create a directory.
 \ DESTINATION\ DIRECTORY=\ Destination Directory
 SAVE\ CHANGES=Save Changes
 THERE\ ARE\ UNSAVED\ CHANGES.SAVE\ NOW?=There are unsaved changes.\nSave now?
@@ -152,3 +152,29 @@ EDITING\ CURRENT\ COLUMN\ VIEW=Editing Current Column View
 SHOW\ CHILD\ NODES=Show child nodes
 SELECT\ THE\ CHILD\ NODE\ TYPE\ TO\ DISPLAY=Select the child node type to display
 FOUND\ %D\ MATCHING\ ROWS=Found %d matching rows
+THE\ ORIGIONAL\ FILE\ LOCATION\ CANNOT\ BE\ FOUND=The original file location cannot be found
+SAVE\ PENDING\ CHANGES?=Save pending changes?
+ADD\ BULK\ RESOURCES=Add Bulk Resources
+ADD\ WORKING\ DIRECTORY=Add Working Directory
+FAILED\ TO\ ADD\ FROM\ FAVOURITES,\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Failed to add from favourites, see error log for details.
+XSDCHECKER=XsdChecker
+TREE_VALIDATION=Validation
+VALIDATION\ WILL\ BE\ AGAINST\ THE\ FILE\ ON\ DISK.\ SAVE\ CHANGES\ FIRST?=Validation will be against the file on disk. Save changes first?
+SEARCH\ REMOTE\ CORPUS=Search Remote Corpus
+SEARCH=Search
+FAILED\ TO\ ADD\ LOCATION\ TO\ REMOTE\ CORPUS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Failed to add location to remote corpus. See error log for details.
+ADD\ LOCATION=Add Location
+ENTER\ THE\ URL=Enter the URL
+LOCATION\ SHOULD\ BE\ AN\ ABSOLUTE\ URI=Location should be an absolute URI. This means it should start with a scheme, for example \"http://\" or \"file://\".
+ILLEGAL\ FILE\ NAME.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Illegal file name. Check the error log for details.
+WARNING\:\ NO\ FILE\ EXISTS\ AT\ THE\ SPECIFIED\ LOCATION!=Warning: no file exists at the specified location!
+ERROR\ ADDING\ RESOURCE=Error adding resource
+COULD\ NOT\ ADD\ RESOURCE\ TO\ THE\ METADATA.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Could not add resource to the metadata. Check the error log for details.
+INVALID\ URI=Invalid URI
+THE\ URI\ ENTERED\ AS\ A\ RESOURCE\ LOCATION\ IS\ INVALID.\ PLEASE\ CHECK\ THE\ LOCATION\ AND\ TRY\ AGAIN.=The URI entered as a resource location is invalid. Please check the location and try again.
+MANUAL\ RESOURCE\ LOCATION=Manual resource location
+ENTER\ THE\ RESOURCE\ URI\:=Enter the resource URI:
+COULD\ NOT\ DETERMINE\ THE\ ORIGIONAL\ LOCATION=Could not determine the original location
+COULD\ NOT\ DETERMINE\ THE\ ORIGIONAL\ NODE\ TYPE=Could not determine the original node type
+RE\ IMPORT\ BRANCH=Re-import Branch
+ADDING\ A\ NODE\ WILL\ SAVE\ PENDING\ CHANGES=Adding a node will save pending changes to \"%s\" to disk. Do you want to proceed?
