--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -326,7 +326,7 @@ CANNOT\ LINK\ OR\ MOVE\ A\ NODE\ INTO\ ITSELF=Cannot link or move a node into it
 LOADING\ ERROR=Loading Error
 ERROR\ ADDING\ NODE,\ COULD\ NOT\ WAIT\ FOR\ FILE\ TO\ LOAD=Error adding node, could not wait for file to load
 NODES\ OF\ THIS\ TYPE\ CANNOT\ BE\ PASTED\ INTO\ AT\ THIS\ STAGE=Nodes of this type cannot be pasted into at this stage
-PASTED\ STRING\ IS\ NOT\ AND\ IMDI\ FILE=Pasted string is not and IMDI file
+PASTED\ STRING\ IS\ NOT\ AND\ IMDI\ FILE=Pasted string is not an IMDI file
 THE\ TARGET\ FILE\ IS\ NOT\ IN\ THE\ CACHE=The target file is not in the cache
 CANNOT\ PASTE\ SESSION\ SUBNODES\ INTO\ A\ CORPUS=Cannot paste session subnodes into a corpus
 THE\ TARGET\ NODE'S\ FILE\ DOES\ NOT\ EXIST=The target node's file does not exist
