--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -266,8 +266,8 @@ IMPORT_EXPORT_STOP=Stop
 IMPORT_EXPORT_SHIBBOLETH\ AUTHENTICATION\ VIA\ THE\ SURFNET\ METHOD=Shibboleth authentication via the SURFnet method
 IMPORT_EXPORT_LIMIT\ CHARACTERS\ IN\ FILE\ NAMES\ (LAMUS\ FRIENDLY\ FORMAT)=Limit Characters in File Names (LAMUS friendly format)
 IMPORT_EXPORT_RENAME\ METADATA\ FILES\ (TO\ MATCH\ LOCAL\ CORPUS\ TREE\ NAMES)=Rename Metadata Files (to match local corpus tree names)
-TO\:\ =To: 
-FROM\:\ =From: 
+EXPORT_TO\:\ =To: 
+EXPORT_FROM\:\ =From: 
 SHOW\ ERRORS\ IN\ TABLE=Show errors in table
 RESOURCE\ COPY\ ERRORS=Resource Copy Errors
 IF\ COPYING\ OF\ RESOURCE\ FILES\ IS\ SELECTED,\ ANY\ FILE\ COPY\ ERRORS\ WILL\ BE\ REPORTED\ HERE=If copying of resource files is selected, any file copy errors will be reported here.\n
