--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -332,7 +332,8 @@ CANNOT\ PASTE\ SESSION\ SUBNODES\ INTO\ A\ CORPUS=Cannot paste session subnodes 
 THE\ TARGET\ NODE'S\ FILE\ DOES\ NOT\ EXIST=The target node's file does not exist
 COPYING\ WITH\ UNSAVED\ CHANGES=Copying with unsaved changes
 SOME\ OF\ THE\ NODES\ TO\ BE\ COPIED\ CONTAIN\ UNSAVED\ CHANGES=Some of the nodes to be copied contain unsaved changes.\nUnless they are saved, these changes will not be present in the resulting nodes. Continue anyway?
-%D\ NODE(S)\ COULD\ NOT\ BE\ DELETED\ BECAUSE\ THEY\ HAVE\ NO\ PARENT=%d node(s) could not be deleted because they have no parent
+%D\ NODES\ COULD\ NOT\ BE\ DELETED\ BECAUSE\ THEY\ HAVE\ NO\ PARENT=%d nodes could not be deleted because they have no parent
+COULD\ NOT\ DELETE\ NODE\ BECAUSE\ IT\ HAS\ NO\ PARENT=Could not delete node because it has no parent
 THE\ LOCATION\ ALREADY\ EXISTS\ AND\ CANNOT\ BE\ ADDED\ AGAIN=The location already exists and cannot be added again
 DELETE=Delete
 DELETE\ {0}\ NODES?=Delete {0} nodes?
