--- a/src/main/resources/nl/mpi/arbil/localisation/Menus_de.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Menus_de.properties
@@ -254,3 +254,28 @@ SELECT\ RESOURCE\ FILE=Daten-Datei ausw\u00e4hlen
 BROWSE\ FOR\ RESOURCE\ FILE=Datenordner durchsuchen
 ABOUT\ TO\ REPLACE\ ALL\ VALUES\ IN\ COLUMN\ {0}\ WITH\ THE\ VALUE\ {1}(<MULTIPLE\ VALUES>\ WILL\ NOT\ BE\ AFFECTED)="Sie sind dabei alle Inhalte in der Spalte zu ersetzen\ \ ""{0} \ \"" \ \ mit dem Inhalt \ \ ""{1} \ \"" \ \ n (> Felder mit mehreren Inhalten werden nicht ver\u00e4ndert)"
 LOGOUT\ ERROR=Fehler beim Ausloggen
+SAVE\ CURRENT\ COLUMN\ VIEW=Aktuelle Spaltenansicht speichern
+HIDE\ COLUMN=Spalte verbergen
+ALL\ COLUMNS=Alle Spalten
+THIS\ COLUMN=Diese Spalte ({0})
+DELETE\ FIELD\ FROM\ ALL\ NODES=Feld von allen Knoten l\u00f6schen
+FIXED\ COLUMN\ SIZE=Feste Spaltengr\u00f6\u00dfe
+MAKE\ COLUMN\ FIT\ CONTENTS=Spalte an Inhalte anpassen
+MAKE\ ALL\ COLUMNS\ FIT\ CONTENTS=Alle Spalten an Inhalte anpassen
+MAKE\ ALL\ COLUMNS\ THE\ SIZE\ OF=Alle Spalten auf die Gr\u00f6\u00dfe "{0}" bringen
+COPY\ TABLE\ FOR\ WEBSITE=Tabelle f\u00fcr Website kopieren
+COLUMN\ VIEW\ FOR\ THIS\ TABLE=Spaltenansicht f\u00fcr diese Tabelle
+LIMIT\ VIEW\ TO\ CURRENT\ COLUMNS=Ansicht auf aktuelle Spalten beschr\u00e4nken
+EDIT\ THIS\ COLUMN\ VIEW=Diese Spaltenansicht bearbeiten
+GROUP\ FAVOURITES\ BY\ TYPE=Favoriten nach Typen gruppieren
+IMPORT/EXPORT\ FAVOURITES=Favoriten importieren/exportieren
+FORCE\ TYPE\ CHECKING=Type Checking erzwingen
+REMOVE\ SELECTED\ NODES\ FROM\ PARENT=Ausgew\u00e4hlte Knoten von Eltern l\u00f6schen
+JUMP\ TO\ IN\ TREE=Stelle im Baum anzeigen
+SHOW\ CONTEXT=Kontext zeigen
+SELECT\ MATCHING\ ROWS=Passende Zeilen w\u00e4hlen
+ERROR\ DELETING\ FIELDS,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Fehler beim L\u00f6schen des Feldes, f\u00fcr mehr Details bitte Fehlerprotokoll im Hilfemen\u00fc \u00fcberpr\u00fcfen.
+DELETE\ {0}\ X\ {1}={1} Feld "{0}" l\u00f6schen
+DELETE\ ATTRIBUTE\ {0}\ X\ {1}={1} Attribute "{0}" l\u00f6schen
+NO\ UPDATES\ FOUND,\ CURRENT\ VERSION\ IS\ {0}=Keine Aktualisierung gefunden, aktuelle Version ist {0}
+COULD\ NOT\ REVERT\ VERSION,\ NO\ CHANGES\ MADE=Version konnte nicht wiederhergestellt werden, keine \u00c4nderungen vorgenommen
